[project]
name = "test-things"
version = "9001"
description = ""
authors = []
maintainers = []
classifiers = []
dependencies = []

[dependency-groups]
test = ["pytest-deadfixtures"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
packages = ["src"]
